--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 
     <div class="wrapper">
       <div class="neon-wrapper ">
-        <span class="txt text">Mpiliardaki?</span>
+        <span class="txt text">Gym?</span>
         <span class="gradient"></span>
         <span class="dodge"></span>
       </div>
 
       <div class="buttonsWrap">
         <div class="neon-wrapper neo2">
-          <span class="txt text2">Nai</span>
+          <span class="txt text2">nai</span>
           <span class="gradient"></span>
           <span class="dodge"></span>
         </div>
